# sunshine-coast-marathon-result-scraper

./: .gitignore  README.md  pyproject.toml
code/: initial_investigation_notebook.ipynb  iso_country_codes.py  scraper.py
